# Redis-Server

./: .env.example  .gitignore  README.md  SYSTEMD_GUIDE.md  config.py  dashboard.sh  docker-compose.yml  main.py  manage.sh  orchestrator.py  pyproject.toml  requirements.txt  setup_systemd.sh  start.sh  stop.sh  structure_tree.txt  test_api_batch.py  test_api_job.py  test_batch.py  test_job.py
Bugs/: BUG-01(FIXED)_HIGH_zombie-process_2026-06-19.md  BUG-02(FIXED)_HIGH_dead-horse-stuck-job_2026-06-19.md  BUG-03(FIXED)_MEDIUM-HIGH_slot-leak_2026-06-19.md  BUG-04(FIXED)_MEDIUM_fork-in-thread_2026-06-19.md  BUG-05(FIXED)_MEDIUM_result-double-write_2026-06-19.md  BUG-06(FIXED)_LOW_slot-wait-timeout-mismatch_2026-06-19.md  BUG-07(FIXED)_LOW_can-acquire-slots-fail-open_2026-06-19.md  BUG-08(FIXED)_LOW_sort-by-uuid_2026-06-19.md  BUG-09(FIXED)_LOW_clear-state-double-count_2026-06-19.md  BUG-10(FIXED)_LOW_import-inside-retry-loop_2026-06-19.md  BUG-100_MEDIUM_amazon_fr-job-timeout-too-short-for-max-retries-5.md  BUG-101_MEDIUM_amazon_fr-product-gate-title-too-loose-no-url-normalize.md  BUG-102_MEDIUM_amazon_fr-proxy-random-choice-no-dead-proxy-removal.md  BUG-103_LOW_amazon_fr-response-headers-from-wrong-subresource.md  BUG-104_LOW_amazon_fr-playwright-context-leak-outside-try-finally.md  BUG-105_LOW_amazon_fr-check-proxy-country-never-validates-country.md  BUG-106_LOW_dashboard-extract-domain-substring-match-misroute.md  BUG-107_LOW_amazon_fr-batch-main-wrong-signature-deadcode.md  BUG-108_LOW_amazon_fr-dead-batch-mode-and-schema-drift.md  BUG-17_LOW_toctou-slot-precheck-race.md  (+91 more)
(+92 files in other folders)
